apps/services/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: capacitor
spec:
  ports:
    - port: 3333
      targetPort: 3333
      protocol: TCP
  selector:
    app: capacitor
