apps/services/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: capacitor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: capacitor-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - capacitor.seercle.com
      secretName: capacitor-tls
  rules:
    - host: capacitor.seercle.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 3333
